# headless-rss

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY_REVIEW.md  alembic.ini  pyproject.toml  requirements.txt  security_tests.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  cleanup-docker-images.yml  dependabot-auto-merge.yml
alembic/: README  env.py
alembic/versions/: 01f73e6bfaea_add_default_folder.py  04239faf8d5b_enable_wal.py  2023_09_15_123456_add_article_model.py  2023_09_15_123457_add_folder_model.py  20250421_70f699292c8b_add_is_mailing_list_col.py  20250421_f0a4c607411b_add_mailing_lists.py  2025_update_feed_folder_id_and_folder_name.py  20260209_5c2f1d0f3b1a_add_feed_quality_flags.py  20260210_8f3c1a2b9c7d_rename_body_to_summary.py  3abc0ae31458_delete_orphan_articles.py  5c2f1d0f3b1a_add_feed_quality_flags.py  70f699292c8b_add_is_mailing_list_col.py  90750727ac7e_make_folder_mandatory.py  936806105f66_create_initial_db_model.py  da62f26bd3e5_remove_invalid_thumbnail_fields.py  f0a4c607411b_add_mailing_lists.py
docker/: entrypoint
spec/: spec-api-nextcloud.md  spec-email-newsletters.md  spec-feed-aggregation.md
src/: alembic.ini  article.py  cli.py  content.py  crud.py  database.py  email.py  feed.py  folder.py  main.py  options.py  schemas.py
src/alembic/: env.py
src/api/: app.py
src/api/nextcloud_news/: app.py  endpoint.py  feed.py  folder.py  item.py  schema.py
src/api/nextcloud_news/v1_2/: app.py  feed.py  folder.py  item.py  version.py
src/api/nextcloud_news/v1_3/: app.py  feed.py  folder.py  item.py  (+1 more)
tests/: conftest.py  test_article_extraction.py  test_crud.py  test_email.py  test_email_html_cleanup.py  test_feed.py  test_feed_parsing.py  test_feed_quality.py  test_media_thumbnail.py
tests/api/: test_app.py
tests/api/nextcloud_news/: test_auth.py  test_endpoint.py  test_feed.py  test_folder.py  test_item.py
tests/e2e/: README.md  conftest.py  run_e2e_test.py  test_container.py
tests/feeds/: atom.xml  atom_1_0.xml  feed_with_images.xml  feed_without_ids.xml
tests/fixtures/feeds/: github_releases.atom  rss_2_0.xml
tests/fixtures/pages/: simple_article.html
(+11 files in other folders)
