[project]
name = "headless-rss"
dynamic = ["version"]
description = "A minimal-viable feed aggregator made for self-hosting"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.14.1",
    "click>=8.1.8",
    "fastapi>=0.115.7",
    "fastapi-utilities>=0.3.0",
    "feedparser>=6.0.11",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-httpserver>=1.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.3",
    "werkzeug>=3.1.3",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "N",  # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[[tool.mypy.overrides]]
module = ["feedparser.*"]
follow_untyped_imports = true
